2002-04-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el: Require `pcustom' for old Emacsen.

2002-04-05  Takenobu Sugiyama  <sugiyama@ae.advantest.co.jp>

	* shimbun/sb-nikkansports.el: Follow the change of the Web site.

2002-04-05  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-w3m-retrieve): Revert previous change.
	(w3m-w3m-dump-head-source): Add argument orig-url;
	Cache header and body using orig-url.
	(w3m-w3m-retrieve): Don't cache header here;
	Return error response when follow redirection number exceeds
	w3m-follow-redirection;
	Pass orig-url to w3m-w3m-retrieve-1.
	(w3m-w3m-retrieve-1): Add argument orig-url;
	Call w3m-dump-head-source with orig-url argument.
	(w3m-redirect-with-get): Changed default value to t.

2002-04-05  Taiki SUGAWARA  <taiki.s@cityfujisawa.ne.jp>

	* w3m-e20.el (w3m-bitmap-image-insert): Fix (point) -> pos.

2002-04-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-input-map): If menu string is empty,
	use href string instead.

	* w3m.el (w3m-w3m-dump-head-source): Fixed caching logic.
	(w3m-w3m-retrieve): Use cache if available after redirection.

2002-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e20.el (top): Avoid byte-compile warnings when not found
	`bitmap'.
	(w3m-image-type-available-p): Return nil if not have `bitmap'.

2002-04-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-fontify-anchors): Set default icon type as ico.

	* w3m-e21.el (w3m-buffer-favicon): Asynchronous implementation.

2002-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3mhack.el (top): Avoid byte-compile error for `w3m-ucs.el' with
	Emacs20 when it has `un-define' and `bitmap'.
	(w3mhack-load-path): Add the path of `bitmap.el' on Emacs20.

2002-04-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-request-arguments): Use -header option if no cookie
	nor no body.
	(w3m-w3m-retrieve-1): Delete temp-file only when it exists.

	* w3m-e21.el (w3m-imagick-start-convert-data): Don't use